src/css/header.css
.header-container{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 20px;
}
.header-logo{
    font-family: "Impact", sans-serif;
    font-weight: 400;
    font-size: 24px;
    line-height: 1;
    letter-spacing: 0.06em;
    text-transform: uppercase;
    color: #292929;
    white-space: nowrap;
}

.header-nav-list{
    display: none;
}

.open-menu-btn{
    /* border: none;     */
}
.burger{
    display: block;
    fill: #292929;
}

.mobile-menu {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #ffffff;
    background-image: url('/img/bg-img/decor8-mobile.webp');
    background-repeat: no-repeat;
    background-position: center;
    background-size: 70%;

    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
            
}

.mobile-menu-container {
    position: relative;  
    display: flex;
    flex-direction: column;
    height: 100%;
    min-width: 320px;
    padding: 16px 20px;
    margin-right: auto;
}

.mobile-menu-close {
    position: absolute;
    right: 24px;
    width: 24px;
    height: 24px;
    border: none;
    padding: 0;
    cursor: pointer;
    border: 1px solid rgba(0, 0, 0, 0.1);
    background-color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    line-height: 0;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

  .is-open {
      opacity: 1;
      visibility: visible;
      pointer-events: auto;

  }

  .mobile-header-logo{
    font-family: "Impact", sans-serif;
    font-weight: 400;
    font-size: 24px;
    line-height: 1;
    letter-spacing: 0.06em;
    text-transform: uppercase;
    color: #292929;
  }

  .mobile-menu-nav{
    display: flex;
    justify-content: center;
    padding-top: 276px;
    padding-bottom: 267px;
    

  }

  .menu-mobile-list{
    display: flex;
    gap: 24px;
    align-items: center;
    flex-direction: column;
  }

  .menu-moible-item{
    display: flex;
    gap: 24px;
  }

 /* версия на планшет */
 @media screen and (min-width: 768px) {

    .header-container{
        padding: 32px;
    }

     .header-logo{
        font-family: "Impact", sans-serif;
            font-weight: 400;
            font-size: 32px;
            line-height: 1;
            letter-spacing: 0.05em;
            text-transform: uppercase;
            color: #292929;
     }


     .open-menu-btn{
        display: none;
     }

     .header-nav-list{
        display: flex;
        margin-left: 166px;
        gap: 40px;

     }

     .header-item{
        font-family: "Poppins", sans-serif;
            font-weight: 300;
            font-size: 16px;
            line-height: 1.5;
            letter-spacing: 0.03em;
            color: #292929;
     }

     .mobile-menu{
        display: none;
     }
    }

        @media screen and (min-width: 1280px) {
    
            .container {
                max-width: 1280px;
                padding-top: 36px;
                padding-bottom: 36px;
            }
            .header-nav-list{
             display: flex;
             margin-left: 678px;
             gap: 40px;
            }
              .mobile-menu {
               display: none;
              }
                        
        }



                .modal-close-btn {
                    position: absolute;
                    top: 24px;
                    right: 24px;
                    width: 24px;
                    height: 24px;
                    border-radius: 50%;
                    padding: 0;
                    cursor: pointer;
                    border: 1px solid rgba(0, 0, 0, 0.1);
                    background-color: #e7e9fc;
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    line-height: 0;
                    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
                }

